// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pullquote can be converted to a quote 1`] = `
"<!-- wp:quote -->
<blockquote class=\\"wp-block-quote\\"><p>one</p><p>two</p><cite>cite</cite></blockquote>
<!-- /wp:quote -->"
`;

exports[`Pullquote can be converted to paragraphs and renders a paragraph for the cite, if it exists 1`] = `
"<!-- wp:paragraph -->
<p>one</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>two</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>cite</p>
<!-- /wp:paragraph -->"
`;

exports[`Pullquote can be converted to paragraphs and renders a void paragraph if both the cite and quote are void 1`] = `""`;

exports[`Pullquote can be converted to paragraphs and renders one paragraph block per <p> within the quote 1`] = `
"<!-- wp:paragraph -->
<p>one</p>
<!-- /wp:paragraph -->

<!-- wp:paragraph -->
<p>two</p>
<!-- /wp:paragraph -->"
`;

exports[`Pullquote can be converted to paragraphs and renders only one paragraph for the cite, if the quote is void 1`] = `
"<!-- wp:paragraph -->
<p>cite</p>
<!-- /wp:paragraph -->"
`;

exports[`Pullquote can be created by converting a paragraph 1`] = `
"<!-- wp:pullquote -->
<figure class=\\"wp-block-pullquote\\"><blockquote><p>test</p></blockquote></figure>
<!-- /wp:pullquote -->"
`;

exports[`Pullquote can be created by converting multiple paragraphs 1`] = `
"<!-- wp:pullquote -->
<figure class=\\"wp-block-pullquote\\"><blockquote><p>one</p><p>two</p></blockquote></figure>
<!-- /wp:pullquote -->"
`;

exports[`Pullquote can be created by typing "/pullquote" 1`] = `
"<!-- wp:pullquote -->
<figure class=\\"wp-block-pullquote\\"><blockquote><p>I’m a pullquote</p></blockquote></figure>
<!-- /wp:pullquote -->"
`;
